# chileneumaticos-webscraping-api

./: .env.dev  .env.example  Dockerfile  README.md  alembic.ini  dev.db  docker-compose.yml  postman_collection.json  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_create_initial_user.py
app/: db.py  main.py
app/api/v1/: __init__.py  analysis.py  auth.py  scrapper.py  title_formats.py
app/core/: config.py  security.py  ws.py
app/models/: __init__.py  brand.py  parsed_result.py  price_history.py  product.py  tire_spec.py  title_format.py  user.py
app/schemas/: __init__.py  auth.py  parsed_result.py  title_format.py  user.py
app/scrappers/: base.py  example_com.py  sdn.py  sdn.scrapper.py
app/services/: parse_service.py  scrape_service.py
scripts/: run_dev.sh  run_example_scraper.py  setup_dev.sh  setup_selenium.sh
tests/: conftest.py  test_auth.py  test_parse_service.py  test_title_formats_api.py
